<resources>
    <string name="app_name">View</string>
    <string name="payonix">Payonix</string>
    <string name="ani_kredit">Ani Kredit</string>
    <string name="content">Planlaşdırılmamış xərclər zamanı qısa bir vaxt ərzində kredit əldə etmək şansı.</string>
    <string name="kredit_sorgusu">KREDİT SORĞUSU</string>
    <string name="is_varmi">Hal-hazırda işlədiyiniz rəsmi iş yerniz varmı?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="agree">Kredit reyestrindən və Asan Finans-dan məlumatlarımın yoxlanılmasına razıyam</string>
    <string name="next">Növbəti</string>
    <string name="hesablama">Hesablama</string>
    <string name="mebleg">MƏBLƏĞ</string>
    <string name="mebleg_deyeri">100 AZN</string>
    <string name="muddet">MÜDDƏT</string>
    <string name="gun">26 GÜN</string>
    <string name="geri_qaytarilacaq">GERİ QAYTARILACAQ</string>
    <string name="qaytarilan_mebleg_deyeri">113 AZN</string>
    <string name="calendar">min 15 - mak 30 gün</string>
    <string name="komissiya_degeri">Komissiya 0 AZN</string>
    <string name="security">Təhlükəsizlik</string>
    <string name="security_guarantee">Məlumatlarınızın təhlükəsizliyinə tam təminat veririk</string>
    <string name="sorgu">Sorğu</string>
    <string name="survey_description">Son qərar müraciətə baxıldıqdan sonra veriləcəkdir</string>
    <string name="contacts_person">Əlaqəli adamları seçin</string>
    <string name="contact_phonenumbers_description">Əlaqə saxlaya biləcəyimiz şəxslərin telefon nömrələrini qeyd edin</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="number_two_letters">ABC</string>
    <string name="three">3</string>
    <string name="number_three_letters">DEF</string>
    <string name="number_four_letters">GHI</string>
    <string name="four">4</string>
    <string name="number_seven_letters">PQRS</string>
    <string name="seven">7</string>
    <string name="five">5</string>
    <string name="number_five_letters">JKL</string>
    <string name="six">6</string>
    <string name="number_six_letters">MNO</string>
    <string name="number_eight_letters">TUV</string>
    <string name="eight">8</string>
    <string name="number_nine_letters">WXYZ</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="evaluation">Dəyərləndirmə</string>
    <string name="evaluation_desc">Sorğunuz dəyərləndirmə mərhələsindədir. Mütəxəssislərimiz tərəfindən sorğunuza baxıldıqdan sonra muvafiq nəticə barədə məlumatlandırılacaqsınız. bu uzun çəkməyəcək...</string>
    <string name="main_page">Əsas səhifə</string>
    <string name="result">Nəticə</string>
    <string name="result_desc">"Kredit müraciətiniz təstiqləndi! "</string>
    <string name="confirm_kredit">Kreditiniz uğurla təsdiqləndi</string>
    <string name="pay_time">Ödəmə müddəti</string>
    <string name="apply_time">Müraciət tarixi</string>
    <string name="end_pay_time">Son ödəmə tarixi</string>
    <string name="daily_percentage">Günlük faiz</string>
    <string name="paying_end_amount">Ödəniləcək yekun məbləğ</string>
    <string name="gain_kredit">Krediti əldə edin</string>
    <string name="gain_kredit_">Kredit əldə et</string>
    <string name="reject_kredit">Kreditdən imtina</string>
    <string name="sms_code">SMS təsdiq</string>
    <string name="telefon_nummer">0504021199 nömrəsinə göndərilən 6 rəqəmli şifrəni daxil edin</string>
    <string name="repeat_send">Təkrar göndər (59)</string>
    <string name="ani_kredit_desc">Ödəmə üsulları ilə yaxından tanış olmaq üçün</string>
    <string name="paying_ani_kredit"><![CDATA[Ödəmələr >> Digər >> Ani Kredit]]></string>
    <string name="prefer">Üstünlüklər</string>
    <string name="gain_kredit_desc">Krediti əldə et - 1 dəqiqəyə qədər!</string>
    <string name="group_desc">Hər kəs bizim kreditdən yararlana bilər.</string>
    <string name="file_desc">Minimum sənəd paketi</string>
    <string name="anikredit_description">Ani Kreditin əsas üstünlüyü onun daha əlçatan olmasıdır. Vaxtınıza qənaət edin dərhal kredit əldə edin!</string>
    <string name="previous_kredit">Keçmiş kreditlərim</string>
    <string name="credit_notfound">Kredit keçmişiniz yoxdur</string>
    <string name="pay">Ödə</string>
    <string name="daily_percent">Günlük faiz</string>
    <string name="paid">Ödənilib</string>
    <string name="debt_of_today">Bu günə borc</string>
    <string name="paying">Ödəmə</string>
</resources>