<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/finish_background"
    tools:context=".Finish">


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ani_kredit"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:letterSpacing="0.01"
        android:fontFamily="@font/sfprotextbold_semi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/kredit_done" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="3sp"
        android:text="@string/ani_kredit_desc"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paying_ani_kredit"
        android:fontFamily="@font/sfprotextbold_semi"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="3sp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/next_button_background"
        android:letterSpacing="0.02"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/main_page"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />
</androidx.constraintlayout.widget.ConstraintLayout>