<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AniKredit">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_background"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/arrow_back"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:letterSpacing="0.03"
                    android:text="@string/ani_kredit"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gaincredit_backround"
                android:backgroundTint="@color/white"
                android:elevation="0dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/add"
                    app:backgroundTint="@color/green"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/add"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="20dp"
                    android:letterSpacing="0.03"
                    android:text="@string/gain_kredit_"
                    android:textColor="@color/mebleg_textcolor"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprotextbold_semi"
        android:text="@string/previous_kredit"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_kredit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <ImageView
        android:id="@+id/img_creditnotfound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.1"
        android:src="@drawable/credit_notfound" />

    <TextView
        android:id="@+id/txt_creditnotfound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_notfound"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:letterSpacing="0.04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_creditnotfound" />
</androidx.constraintlayout.widget.ConstraintLayout>